fixed page overflow-x problem

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -13,6 +13,7 @@
 html
   font-family: $bodyfont
   background-color: $primarycolor
+  overflow-x: hidden
 
 body
   font-size: $base-fontsize
